Minor navbar developed for investor relations page

--- a/investorRelations/index.html
+++ b/investorRelations/index.html
@@ -9,6 +9,26 @@
     </head>
     <body>
         <div id = 'navbar'>This space is specially dedicated for NAVBAR</div>
+        <div id = 'titleDisplay'></div>
+        <div id = 'minorNavBar'>
+            <div>
+            <div style="width: 180px;"><p>Investor Overview</p></div>
+            <div style="width: 100px;"><p>News</p></div>
+            <div style="width: 250px;"><p>Events And Presentations</p></div>
+            <div style="width: 250px;"><p>Leadership And Governance</p></div>
+            <div><p>FAQ</p></div>
+            </div>
+        </div>
+        <div id = 'contentDisplay'><h1>jsfkljasflkdispoisdpof
+            askfjsadjfsadjfsdafasdfopsadfposiadfpoiasdpofispadofiposdipsdposdipodifposiasioa
+        </h1><br/> <br/><br/><br/><br/><br/><br/><br/><br/><br/><hr/><br/><br/><br/><br/><hr/>
+        <br/><br/><br/><br/><hr/>
+        <br/><br/><br/><br/><hr/>
+        <br/><br/><br/><br/><hr/>
+        <br/><br/><br/><br/><hr/>
+        <br/><br/><br/><br/><hr/>
+        <br/><br/><br/><br/><hr/>
+        <br/><br/><br/><br/><hr/></div>
         <script type = "module" src = "investors.js"></script>
     </body>
 </html>
