Unwanted texts in html page removed, added for testing purpose

--- a/investorRelations/index.html
+++ b/investorRelations/index.html
@@ -19,16 +19,7 @@
             <div><p>FAQ</p></div>
             </div>
         </div>
-        <div id = 'contentDisplay'><h1>jsfkljasflkdispoisdpof
-            askfjsadjfsadjfsdafasdfopsadfposiadfpoiasdpofispadofiposdipsdposdipodifposiasioa
-        </h1><br/> <br/><br/><br/><br/><br/><br/><br/><br/><br/><hr/><br/><br/><br/><br/><hr/>
-        <br/><br/><br/><br/><hr/>
-        <br/><br/><br/><br/><hr/>
-        <br/><br/><br/><br/><hr/>
-        <br/><br/><br/><br/><hr/>
-        <br/><br/><br/><br/><hr/>
-        <br/><br/><br/><br/><hr/>
-        <br/><br/><br/><br/><hr/></div>
+        <div id = 'contentDisplay'></div>
         <script type = "module" src = "investors.js"></script>
     </body>
 </html>
