homepage page2 4boxes

--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -269,6 +269,82 @@
             </div>
 
         </div>
+
+        <div id="homepage2-cont-4boxes">
+            <div id="homepage2-cont-4boxes-1">
+
+                <div class="homepage2-cont-4boxes-box1">
+                    <h2>Marketing Hub</h2>
+                    <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound
+                        marketing campaigns at scale.</p>
+                    <div>
+                        <p>Popular Features</p>
+                        <i class="fas fa-check-circle"><span>Lead generation</span></i>
+                        <i class="fas fa-check-circle"><span>Marketing automation</span></i>
+                        <i class="fas fa-check-circle"><span>Analytics<span></i>
+                    </div>
+                    <span>
+                        <button id="homepage2-cont-4boxes-box1-btn">Get started</button>
+                    </span>
+
+                </div>
+                <div class="homepage2-cont-4boxes-box1">
+                    <h2>Sales Hub</h2>
+                    <p>Sales CRM software to help you get deeper insights into prospects, automate the tasks you hate,
+                        and close more deals faster.</p>
+                    <div>
+                        <p>Popular Features</p>
+                        <i class="fas fa-check-circle"><span>Advanced CRM</span></i>
+                        <i class="fas fa-check-circle"><span>Meeting scheduling</span></i>
+                        <i class="fas fa-check-circle"><span>Quotes<span></i>
+                    </div>
+                    <span>
+                        <button id="homepage2-cont-4boxes-box1-btn">Get started</button>
+                    </span>
+
+                </div>
+
+            </div>
+
+
+
+
+            <div id="homepage2-cont-4boxes-1">
+
+                <div class="homepage2-cont-4boxes-box1">
+                    <h2>Service Hub</h2>
+                    <p>Customer service software to help you connect with customers, exceed expectations, and turn them
+                        into promoters who grow your business.</p>
+                    <div>
+                        <p>Popular Features</p>
+                        <i class="fas fa-check-circle"><span>Tickets</span></i>
+                        <i class="fas fa-check-circle"><span>Customer feedback</span></i>
+                        <i class="fas fa-check-circle"><span>Knowledge base<span></i>
+                    </div>
+                    <span>
+                        <button id="homepage2-cont-4boxes-box1-btn">Get started</button>
+                    </span>
+
+                </div>
+                <div class="homepage2-cont-4boxes-box1">
+                    <h2>CMS Hub</h2>
+                    <p>Content management software that’s flexible for marketers, powerful for developers, and gives
+                        customers a personalized, secure experience.</p>
+                    <div>
+                        <p>Popular Features</p>
+                        <i class="fas fa-check-circle"><span>Drag-and-drop editor</span></i>
+                        <i class="fas fa-check-circle"><span>SEO recommendations</span></i>
+                        <i class="fas fa-check-circle"><span>Website themes<span></i>
+                    </div>
+                    <span>
+                        <button id="homepage2-cont-4boxes-box1-btn">Get started</button>
+                    </span>
+
+                </div>
+
+            </div>
+
+        </div>
     </div>
 
 
