homepage page3 learn and grow 8Grids

--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -11,7 +11,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HubSpot | Inbound Marketing,
+        Sales, and Service Software
+    </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -348,7 +350,74 @@
     </div>
 
 
+    <!-- After 4BOXES Learn and grow with award-winning support -->
 
+    <div id="hub-homepage-learn-and-grow">
+        <div class="learn-and-grow-textPart">
+            <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+            <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with
+                HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just
+                like
+                you.
+
+            </p>
+        </div>
+        <div class="hub-homepage-learn-and-grow-8grids">
+            <div class="learn-and-grow-8grids-1 learn-and-grow-8grids">
+                <div>
+                    <img
+                        src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" />
+                    <h1 class="learn-and-grow-8grids-header">150+</h1>
+                    <p class="learn-and-grow-8grids-para">HubSpot user groups</p>
+                </div>
+                <div>
+                    <img
+                        src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" />
+                    <h1 class="learn-and-grow-8grids-header">7M+</h1>
+                    <p class="learn-and-grow-8grids-para">monthly visits</p>
+                </div>
+                <div>
+                    <img
+                        src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" />
+                    <h1 class="learn-and-grow-8grids-header">330K+</h1>
+                    <p class="learn-and-grow-8grids-para">certified professionals</p>
+                </div>
+                <div>
+                    <img
+                        src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" />
+                    <h1 class="learn-and-grow-8grids-header">26K</h1>
+                    <p class="learn-and-grow-8grids-para">registered attendees</p>
+                </div>
+
+            </div>
+            <div class="learn-and-grow-8grids-2 learn-and-grow-8grids">
+                <div>
+                    <img style="width: 150px;"
+                        src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" />
+                    <h1 class="learn-and-grow-8grids-header">650+</h1>
+                    <p class="learn-and-grow-8grids-para">integrations</p>
+                </div>
+                <div>
+                    <img
+                        src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" />
+                    <h1 class="learn-and-grow-8grids-header">6</h1>
+                    <p class="learn-and-grow-8grids-para">languages</p>
+                </div>
+                <div>
+                    <img
+                        src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" />
+                    <h1 class="learn-and-grow-8grids-header">2.6M+</h1>
+                    <p class="learn-and-grow-8grids-para">social followers</p>
+                </div>
+                <div>
+                    <img src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" />
+                    <h1 class="learn-and-grow-8grids-header">100,000+</h1>
+                    <p class="learn-and-grow-8grids-para">customers</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
