homepage page4 wwf suzuki tello

--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -419,6 +419,66 @@
         </div>
     </div>
 
+    <!-- After 4BOXES Learn and grow with award-winning support 8GRIDS ENDED-->
+
+
+    <!-- After 8grids someCompnaies(SUZUKI , TRELLO ,WWF) STARTS-->
+
+    <div id="hub-homepage-wwf-suzuki-trello">
+        <div class="wwf-suzuki-trello-leftside">
+            <h2>100,000+</h2>
+            <p>customers in over <b>120</b> countries growing their businesses with HubSpot
+            </p>
+        </div>
+        <div class="hub-homepage-wwf-suzuki-trello-rightside">
+            <div class="wwf-suzuki-trello-rightside-1 wwf-suzuki-trello-grid">
+                <div>
+                    <img src="https://f.hubspotusercontent00.net/hubfs/53/1200px-WWF_logo_svg%20(1).png" />
+                </div>
+                <div>
+                    <img src="https://f.hubspotusercontent00.net/hubfs/53/trello-logo-blue%20(1).png" />
+
+                </div>
+                <div>
+                    <img src="https://f.hubspotusercontent00.net/hubfs/53/1200px-G2_Crowd_logo.svg.png" />
+
+                </div>
+                <div>
+                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/homepage/Vertical_Sabaeus_RGB.svg" />
+
+                </div>
+
+            </div>
+            <div class="wwf-suzuki-trello-rightside-2 wwf-suzuki-trello-grid">
+                <div>
+                    <img
+                        src="https://newinboundblog.hubspot.com/hubfs/assets/hubspot.com/case-studies/logo-bank/EMEA-logo-bank/Suzuki.png" />
+
+                </div>
+                <div>
+                    <img src="https://f.hubspotusercontent00.net/hubfs/53/soundcloud.png" />
+
+                </div>
+                <div class="classPass">
+                    <img
+                        src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" />
+
+                </div>
+                <div>
+                    <img
+                        src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" />
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- After 8grids someCompnaies(SUZUKI , TRELLO ,WWF) ENDS -->
+
+
+
+
     <script src="script.js"></script>
 </body>
 
