New div for displaying Stock perfromance added

--- a/investorRelations/index.html
+++ b/investorRelations/index.html
@@ -12,11 +12,11 @@
         <div id = 'titleDisplay'></div>
         <div id = 'minorNavBar'>
             <div>
-            <div style="width: 180px;"><p>Investor Overview</p></div>
-            <div style="width: 100px;"><p>News</p></div>
-            <div style="width: 250px;"><p>Events And Presentations</p></div>
-            <div style="width: 250px;"><p>Leadership And Governance</p></div>
-            <div><p>FAQ</p></div>
+            <div style="width: 180px;" id = "investorOverview"><p>Investor Overview</p></div>
+            <div style="width: 100px;" id = "news"><p>News</p></div>
+            <div style="width: 250px;" id = "eventUpdate"><p>Events And Presentations</p></div>
+            <div style="width: 250px;" id ="leadershipDetails"><p>Leadership And Governance</p></div>
+            <div id = "faq"><p>FAQ</p></div>
             </div>
         </div>
         <div id = 'contentDisplay'></div>
