homepage page5 lastpage

--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -476,7 +476,17 @@
 
     <!-- After 8grids someCompnaies(SUZUKI , TRELLO ,WWF) ENDS -->
 
-
+    <div id="homepage-lastPage-page5">
+        <div class="homepage-lastPage-page5-leftSide">
+            <h1>Start Growing With HubSpot Today</h1>
+            <p>With tools to make every part of your process more human and a support team excited to help you, getting
+                started with inbound has never been easier.</p>
+            <span>Get started with FREE tools, or get more with our premium software.</span>
+        </div>
+        <div class="homepage-lastPage-page5-rightSide">
+            <img src="https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sg-module-images/10@2x.png" />
+        </div>
+    </div>
 
 
     <script src="script.js"></script>
