top-nav-bar-aboutUs section

--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -19,10 +19,111 @@
 
 <body>
 
+
     <!-- NAV START -->
 
-
     <nav>
+
+        <div id="top-navigation-bar">
+            <ul>
+                <li>
+                    <a id="top-nav-language-option" href="" style="color: rgb(65, 64, 64);">English <i
+                            class="fas fa-chevron-down" style="transition: all 1s ease 0s;"></i>
+                    </a>
+                </li>
+
+                <li><a class="top-nav-contact-sales" id="contact-sales-nav-id" href="#"><i style="margin-right: 5px;"
+                            class="fas fa-user"></i>Contact Sales</a></li>
+
+                <div class="top-nav-space"></div>
+
+                <li>
+                    <a href=""><i class="fa fa-search"></i></a>
+                </li>
+
+                <li><a id="top-nav-login" href="#">Log in</a></li>
+
+                <li><a id="top-nav-customer-support" href="#">Customer Support</a></li>
+                <li>
+                    <a id="top-nav-about-Us" href="" style="color: rgb(65, 64, 64);">About <i class="fa fa-chevron-down"
+                            style="transition: all 0.2s ease 0s;"></i></a>
+                </li>
+
+            </ul>
+
+
+
+
+
+
+
+            <!-- /////////////////////////////////// -->
+
+
+
+
+
+            <!-- software-nav -->
+
+
+            <div id="aboutUs-option-nav" class="bout-nav" style="display: none">
+
+                <div>
+                    <div class="aboutUs-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>About Us</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="aboutUs-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>Careers</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="aboutUs-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>Contact Us</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="aboutUs-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>Investor Relations</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="aboutUs-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>Management Team</span>
+                        </a>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+
+
+
+
+
+
+
+        </div>
+
+        <hr />
+
+
         <a href="index.html"><img
                 src="https://static.hsappstatic.net/salesImages/static-1.415/logos/hubspot-standard.svg"
                 alt="hubspot.com">
@@ -43,7 +144,7 @@
 
             <div class="space"></div>
 
-            <li>
+            <li style="margin-top: 20px;">
                 <button>Get Hubspot free</button>
             </li>
 
@@ -54,11 +155,11 @@
             </div>
         </ul>
 
-        <ul id="small-menu" class="burger-menu" style="display: none;">
+        <!-- <ul id="small-menu" class="burger-menu" style="display: none;">
             <li><a href="">Software</a></li>
             <li><a href="">Pricing</a></li>
             <li><a href="#">Resources</a></li>
-        </ul>
+        </ul> -->
 
 
 
