top-nav-bar-language section

--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -27,8 +27,9 @@
         <div id="top-navigation-bar">
             <ul>
                 <li>
-                    <a id="top-nav-language-option" href="" style="color: rgb(65, 64, 64);">English <i
-                            class="fas fa-chevron-down" style="transition: all 1s ease 0s;"></i>
+                    <a id="top-nav-language-option" href=""><i style="margin-right: 8px;"
+                            class="fas fa-globe-europe"></i>English <i class="fas fa-chevron-down"
+                            style="transition: all 1s ease 0s;"></i>
                     </a>
                 </li>
 
@@ -38,14 +39,14 @@
                 <div class="top-nav-space"></div>
 
                 <li>
-                    <a href=""><i class="fa fa-search"></i></a>
+                    <a href=""><i style="color: #00a4bd; font-size: 16px;" class="fa fa-search"></i></a>
                 </li>
 
                 <li><a id="top-nav-login" href="#">Log in</a></li>
 
                 <li><a id="top-nav-customer-support" href="#">Customer Support</a></li>
                 <li>
-                    <a id="top-nav-about-Us" href="" style="color: rgb(65, 64, 64);">About <i class="fa fa-chevron-down"
+                    <a id="top-nav-about-Us" href="">About <i class="fa fa-chevron-down"
                             style="transition: all 0.2s ease 0s;"></i></a>
                 </li>
 
@@ -114,14 +115,71 @@
 
 
 
+            <!-- Language Option -->
 
+
+            <div id="Language-option-nav" class="lang-nav" style="display: none">
+
+                <div>
+                    <div class="Language-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>日本語</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="Language-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>Deutsch</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="Language-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>English</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="Language-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>Español</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="Language-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>Português</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="Language-option-1-2-inside">
+
+                        <a href="" class="soft-nav-links"><span>Français</span>
+                        </a>
+                    </div>
+                </div>
+
+
+
+            </div>
 
 
 
 
         </div>
 
-        <hr />
+
+        <!-- Main NAV-BAR Starts -->
+        <!-- <hr /> -->
 
 
         <a href="index.html"><img
