Contact sales 3 boxes to contact

--- a/contact_sales/contact_sales_index.html
+++ b/contact_sales/contact_sales_index.html
@@ -35,13 +35,35 @@
     <!-- Just after TOP nav -->
 
     <div id="contact-us-about-soft">
-        <div>
+        <div class="contact-us-about-soft-left">
             <h1>Contact Us About HubSpot's Software</h1>
             <p>We'd love to show you how you can get more traffic and leads, increase your sales productivity, provide
                 better customer service, or all of the above! Here are a few ways to reach out to our sales team.</p>
         </div>
 
+
+        <div id="contact-sales-3boxes">
+            <div class="contact-box1" id="contact-boxes">
+                <img src="https://offers.hubspot.com/hubfs/Calling@2x.png" />
+                <p>Call us directly</p>
+                <a href="#">+91 11 7127 9211</a>
+                <p class="second-para"><a href="#">See more local numbers</a></p>
+            </div>
+            <div class="contact-box2" id="contact-boxes">
+                <img src="https://offers.hubspot.com/hubfs/Messages@2x.png" />
+                <p>Chat with our sales team</p>
+                <button id="contact-sales-btn1">Chat with Sales</button>
+            </div>
+            <div class="contact-box3" id="contact-boxes">
+                <img src="https://offers.hubspot.com/hubfs/Date@2x.png" />
+                <p>Book a meeting</p>
+                <button id="contact-sales-btn2">Choose a date & time</button>
+            </div>
+        </div>
     </div>
+
+
+
 
     <script src="contact_sales_script.js"></script>
 </body>
