Calling option in meeting page

--- a/contact_sales/meeting_index.html
+++ b/contact_sales/meeting_index.html
@@ -25,9 +25,25 @@
             <button id="meeting-button-2">Call us directally</button>
         </div>
     </div>
+
+
     <div class="ss-of-chatbot">
+        <img src="img/chatbot.png" alt="chatbot">
+    </div>
+
+    <div id="call-us-directly">
+        <div>
+
+            <div class="call-us-directly-orange"></div>
+            <div class="call-us-option">
+                <p>Call us directly at <a href="tel:+1 8447586557">+1 844 758 6557</a></p>
+            </div>
+
+        </div>
 
     </div>
+
+
 
 </body>
 
