Footer for contact sales and meeting page

--- a/contact_sales/contact_sales_index.html
+++ b/contact_sales/contact_sales_index.html
@@ -580,6 +580,14 @@
 
     </div>
 
+    <div id="meeting-footer">
+        <p>Copyright © 2021 HubSpot, Inc.</p>
+        <div>
+            <a href="#">Legal Stuff</a>
+            <a href="#">Privacy Policy</a>
+        </div>
+    </div>
+
 
     <script src="contact_sales_script.js"></script>
 </body>
