--- a/contact_sales/meeting_index.html
+++ b/contact_sales/meeting_index.html
@@ -43,6 +43,13 @@
 
     </div>
 
+    <div id="meeting-footer">
+        <p>Copyright © 2021 HubSpot, Inc.</p>
+        <div>
+            <a href="#">Legal Stuff</a>
+            <a href="#">Privacy Policy</a>
+        </div>
+    </div>
 
 
 </body>
