Method Boxing in contact sales page to calling nos

--- a/contact_sales/contact_sales_index.html
+++ b/contact_sales/contact_sales_index.html
@@ -25,8 +25,8 @@
         <div class="contact-sales-space"></div>
         <ul>
             <li>
-                <a id="contact-nos" href="" style="color: rgb(65, 64, 64);">+91 11 7127 9211<i class="fas fa-caret-down"
-                        style="transition: all 1s ease 0s;"></i>
+                <a id="contact-nos" href="#" style="color: rgb(65, 64, 64);">+91 11 7127 9211<i
+                        class="fas fa-caret-down" style="transition: all 1s ease 0s;"></i>
                 </a>
             </li>
         </ul>
@@ -62,7 +62,14 @@
         </div>
     </div>
 
-    <hr />
+    <!-- Image of chatbot -->
+
+    <div id="contact-sales-chatbot-img">
+        <div class="contact-sales-chatbot-header">
+            <h1>Chat With Our Sales Team</h1>
+        </div>
+        <img style="width: 102%; margin-bottom: 50px;" src="img/contact-sales-chat.png">
+    </div>
     <!-- Book A Meeting -->
 
     <div id="book-meeting-cont">
@@ -587,6 +594,234 @@
             <a href="#">Privacy Policy</a>
         </div>
     </div>
+
+    <!-- Method Boxing for Calling opt Nav -->
+
+
+
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h1>Call Sales Using a Local Number</h1>
+            <div id="america-calling-nos">
+                <p><b>Americas</b></p>
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>US and Canada</p>
+                        <a href="tel:+1 8884131296">+1 888 413 1296 (English)</a>
+                        <a href="tel:+1 8578295064">+1 857 829 5064 (Spanish)</a>
+                    </div>
+                    <div>
+                        <p>Brazil</p>
+                        <a href="tel:+55 2120181092">+55 21 2018 1092 (Portuguese)</a>
+                    </div>
+                    <div>
+                        <p>Chile</p>
+                        <a href="tel:+56 225823853">+56 2 2582 3853 (Spanish)</a>
+
+                    </div>
+
+
+                </div>
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>Colombia</p>
+                        <a href="tel:+57 13819242">+57 1 381 9242 (Spanish)</a>
+
+                    </div>
+                    <div>
+                        <p>Mexico</p>
+                        <a href="+56 5585259498">+56 55 8525 9498 (Spanish)</a>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+            <!-- Europe Country -->
+
+            <div id="america-calling-nos">
+                <p><b>Europe</b></p>
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>Austria</p>
+                        <a href="tel:+43 720902456">+43 720 902 456 (German)</a>
+                        <a href="tel:+43 720902440">+43 720 902 440 (English)</a>
+                    </div>
+                    <div>
+                        <p>Belgium</p>
+                        <a href="tel:+32 28084733">+32 2 808 4733 (French)</a>
+                        <a href="tel:+32 28084734">+32 2 808 4734 (English)</a>
+                    </div>
+                    <div>
+                        <p>Denmark</p>
+                        <a href="tel:+45 69960208">+45 6996 0208 (English)</a>
+
+                    </div>
+
+
+                </div>
+
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>Finland</p>
+
+                        <a href="tel:+43 720902440">+43 720 902 440 (English)</a>
+                    </div>
+                    <div>
+                        <p>France</p>
+                        <a href="tel:+32 28084733">+32 2 808 4733 (French)</a>
+                        <a href="tel:+32 28084734">+32 2 808 4734 (English)</a>
+                    </div>
+                    <div>
+                        <p>Germany</p>
+                        <a href="tel:+49 32221094286">+49 32 221094286 (German)</a>
+                        <a href="tel:+45 69960208">+45 6996 0208 (English)</a>
+
+                    </div>
+
+
+                </div>
+
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>Ireland</p>
+
+                        <a href="tel:+43 720902440">+43 720 902 440 (English)</a>
+                    </div>
+                    <div>
+                        <p>Luxembourg</p>
+                        <a href="tel:+32 28084733">+32 2 808 4733 (French)</a>
+                        <a href="tel:+49 32221094286">+49 32 221094286 (German)</a>
+                        <a href="tel:+32 28084734">+32 2 808 4734 (English)</a>
+                    </div>
+                    <div>
+                        <p>Netherlands</p>
+
+                        <a href="tel:+45 69960208">+45 6996 0208 (English)</a>
+
+                    </div>
+
+
+                </div>
+
+
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>Norway</p>
+
+                        <a href="tel:+43 720902440">+43 720 902 440 (English)</a>
+                    </div>
+                    <div>
+                        <p>Portugal</p>
+
+                        <a href="tel:+32 28084734">+32 2 808 4734 (English)</a>
+                    </div>
+                    <div>
+                        <p>Spain</p>
+                        <a href="+56 5585259498">+56 55 8525 9498 (Spanish)</a>
+                        <a href="tel:+45 69960208">+45 6996 0208 (English)</a>
+
+                    </div>
+
+
+                </div>
+
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>Sweden</p>
+
+                        <a href="tel:+43 720902440">+43 720 902 440 (English)</a>
+                    </div>
+                    <div>
+                        <p>Switzerland</p>
+                        <a href="tel:+49 32221094286">+49 32 221094286 (German)</a>
+                        <a href="tel:+32 28084733">+32 2 808 4733 (French)</a>
+
+                        <a href="tel:+32 28084734">+32 2 808 4734 (English)</a>
+                    </div>
+                    <div>
+                        <p>United Kingdom</p>
+
+                        <a href="tel:+44 2035140663">+44 20 3514 0663 (English)</a>
+
+                    </div>
+
+
+                </div>
+
+
+
+
+            </div>
+
+            <!-- ASIA -->
+
+            <div id="america-calling-nos">
+                <p><b>Asia Pacific</b></p>
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>Australia</p>
+
+                        <a href="tel:+43 720902440">+43 720 902 440 (English)</a>
+                    </div>
+                    <div>
+                        <p>Hong Kong</p>
+
+                        <a href="tel:+32 28084734">+32 2 808 4734 (English)</a>
+                    </div>
+                    <div>
+                        <p>India</p>
+                        <a href="tel:+91 1171279211">+91 11 7127 9211 (English)</a>
+
+                    </div>
+
+
+                </div>
+
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>Japan</p>
+
+                        <a href="tel:+81 368635389">+81 3 6863 5389 (Japanese)</a>
+                    </div>
+                    <div>
+                        <p>New Zealand</p>
+
+                        <a href="tel:+32 28084734">+32 2 808 4734 (English)</a>
+                    </div>
+                    <div>
+                        <p>Singapore</p>
+                        <a href="tel:+91 1171279211">+91 11 7127 9211 (English)</a>
+
+                    </div>
+
+
+                </div>
+
+                <div class="america-calling-nos1">
+                    <div>
+                        <p>South Korea</p>
+
+                        <a href="tel:+81 368635389">+81 3 6863 5389 (Japanese)</a>
+                    </div>
+
+
+                </div>
+
+
+            </div>
+
+
+
+
+        </div>
+
+    </div>
+
 
 
     <script src="contact_sales_script.js"></script>
