--- a/homepage_and_nav/index.html
+++ b/homepage_and_nav/index.html
@@ -33,7 +33,8 @@
                     </a>
                 </li>
 
-                <li><a class="top-nav-contact-sales" id="contact-sales-nav-id" href="#"><i style="margin-right: 5px;"
+                <li><a class="top-nav-contact-sales" id="contact-sales-nav-id"
+                        href="contact_sales/contact_sales_index.html"><i style="margin-right: 5px;"
                             class="fas fa-user"></i>Contact Sales</a></li>
 
                 <div class="top-nav-space"></div>
@@ -80,7 +81,7 @@
                 <div>
                     <div class="aboutUs-option-1-2-inside">
 
-                        <a href="" class="soft-nav-links"><span>Careers</span>
+                        <a href="Careers.html" class="soft-nav-links"><span>Careers</span>
                         </a>
                     </div>
                 </div>
@@ -88,7 +89,7 @@
                 <div>
                     <div class="aboutUs-option-1-2-inside">
 
-                        <a href="" class="soft-nav-links"><span>Contact Us</span>
+                        <a href="ContactUs.html" class="soft-nav-links"><span>Contact Us</span>
                         </a>
                     </div>
                 </div>
@@ -213,11 +214,12 @@
             </div>
         </ul>
 
-        <!-- <ul id="small-menu" class="burger-menu" style="display: none;">
-            <li><a href="">Software</a></li>
-            <li><a href="">Pricing</a></li>
+        <ul id="small-menu" class="burger-menu" style="display: none;">
+            <li><a href="#">Software</a></li>
+            <li><a href="#">Pricing</a></li>
             <li><a href="#">Resources</a></li>
-        </ul> -->
+            <li><a href="#">Get HubSpot Free</a></li>
+        </ul>
 
 
 
@@ -395,7 +397,7 @@
     <!-- NAV END -->
 
 
-    <div id="hub-homepage-cont-page1">
+    <div id="hub-homepage-cont-page1" class="get-started">
 
 
         <!-- <div class="background-clouds">
@@ -643,9 +645,41 @@
             <span>Get started with FREE tools, or get more with our premium software.</span>
         </div>
         <div class="homepage-lastPage-page5-rightSide">
-            <img src="https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sg-module-images/10@2x.png" />
+            <img src="https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sg-module-images/14@2x.png" />
         </div>
     </div>
+
+
+    <!-- FOOTER STARTS -->
+
+
+
+
+    <!-- FOOTER ENDS -->
+
+
+    <script>
+        var showMenu = true;
+        var getStarted = document.querySelector(".get-started");
+        getStarted.style.marginTop = "120px";
+        function toggleMenu() {
+            var menu = document.getElementById("small-menu");
+            if (showMenu) {
+                menu.style.display = "block";
+                showMenu = false;
+            } else {
+                menu.style.display = "none";
+                showMenu = true;
+            }
+        }
+        function hideMenu() {
+            var menu = document.getElementById("small-menu");
+            menu.style.display = "none";
+        }
+        var btn = document.getElementById("burgerbtn");
+        btn.addEventListener("click", toggleMenu);
+        window.onresize = hideMenu;
+    </script>
 
 
     <script src="script.js"></script>
